--- a/index.html
+++ b/index.html
@@ -1,79 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Prince Negi | Portfolio</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Prince Negi — Portfolio</title>
+  <meta name="description" content="Prince Negi — Final year CSE student. Projects, skills and contact." />
+  <link rel="stylesheet" href="style.css" />
+  <link rel="icon" href="data:,"> <!-- empty favicon to avoid 404 -->
 </head>
 <body>
 
-  <!-- Navigation -->
-  <nav>
-    <ul>
-      <li><a href="#about">About</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+  <!-- Header / Nav -->
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="brand" href="#home" aria-label="Prince Negi home">
+        <!-- Circle avatar with initials (SVG) -->
+        <svg class="avatar" viewBox="0 0 100 100" role="img" aria-labelledby="avatarTitle">
+          <title id="avatarTitle">Prince Negi</title>
+          <circle cx="50" cy="50" r="50" fill="#0b2540" />
+          <text x="50%" y="56%" text-anchor="middle" fill="#ffffff" font-family="Segoe UI, Tahoma, sans-serif" font-size="36" font-weight="700">PN</text>
+        </svg>
+        <div class="brand-text">
+          <div class="name">Prince Negi</div>
+          <div class="tag">Final Year CSE • Aspiring Software Developer</div>
+        </div>
+      </a>
 
-  <!-- Hero Section -->
-  <header class="fade-in">
-    <h1>Prince Negi</h1>
-    <p>Final Year CSE Student | Aspiring Software Developer</p>
+      <nav class="main-nav" aria-label="Main navigation">
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+
+      <button id="navToggle" class="nav-toggle" aria-expanded="false" aria-controls="mobileNav">
+        <span class="sr-only">Toggle navigation</span>
+        ☰
+      </button>
+    </div>
+
+    <!-- mobile nav -->
+    <nav id="mobileNav" class="mobile-nav" hidden>
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
   </header>
 
-  <!-- About Section -->
-  <section id="about" class="about fade-in">
-    <h2>About Me</h2>
-    <p>
-      I am a passionate Computer Science student with a strong interest in software development, 
-      problem-solving, and building impactful projects. 
-      Skilled in Java, Python, and web technologies, I aim to contribute to innovative solutions that make a difference.
-    </p>
-    <a href="resume.pdf" class="btn" target="_blank" download>📄 Download Resume</a>
-  </section>
+  <!-- Hero -->
+  <main id="home">
+    <section class="hero section">
+      <div class="container hero-inner">
+        <div class="hero-text fade-in">
+          <h1>Hi — I’m <span class="accent">Prince Negi</span></h1>
+          <p class="lead">
+            Final year Computer Science student. I build reliable software and web apps — focusing on clean code,
+            data structures and practical, user-focused frontends.
+          </p>
 
-  <!-- Projects Section -->
-  <section id="projects" class="fade-in">
-    <h2>Projects</h2>
-    <div class="projects">
-      <div class="card">
-        <h3>Portfolio Website</h3>
-        <p>A personal portfolio built using HTML, CSS, and GitHub Pages to showcase my skills and projects.</p>
-        <a href="https://github.com/yourusername/portfolio" target="_blank">View on GitHub</a>
-      </div>
-      <div class="card">
-        <h3>Chat App</h3>
-        <p>Real-time chat application using Node.js and Socket.io with a clean UI and responsive design.</p>
-        <a href="https://github.com/yourusername/chat-app" target="_blank">View on GitHub</a>
-      </div>
-      <div class="card">
-        <h3>Data Structures Library</h3>
-        <p>A collection of efficient implementations of classic data structures in Java.</p>
-        <a href="https://github.com/yourusername/dsa-library" target="_blank">View on GitHub</a>
-      </div>
-    </div>
-  </section>
+          <div class="cta-row">
+            <a class="btn primary" href="#projects">See Projects</a>
+            <a class="btn ghost" href="resume.pdf" target="_blank" download>📄 Download Resume</a>
+          </div>
 
-  <!-- Contact Section -->
-  <section id="contact" class="contact fade-in">
-    <h2>Contact</h2>
-    <p>Email: <a href="mailto:yourname@email.com">yourname@email.com</a></p>
-    <p>Connect with me on 
-      <a href="https://github.com/yourusername" target="_blank">GitHub</a> | 
-      <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
-    </p>
-  </section>
+          <div class="social">
+            <a href="https://github.com/PriNce0P-Negi" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
+              <!-- GitHub icon -->
+              <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M12 .5a12 12 0 00-3.79 23.4c.6.11.82-.26.82-.58v-2.1c-3.34.73-4.04-1.61-4.04-1.61-.55-1.4-1.33-1.77-1.33-1.77-1.09-.75.08-.74.08-.74 1.2.09 1.83 1.23 1.83 1.23 1.07 1.84 2.8 1.31 3.48 1 .11-.78.42-1.31.76-1.61-2.67-.3-5.47-1.34-5.47-5.96 0-1.32.47-2.4 1.24-3.25-.12-.3-.54-1.52.12-3.17 0 0 1.01-.32 3.3 1.23a11.5 11.5 0 016 0c2.28-1.55 3.29-1.23 3.29-1.23.66 1.65.24 2.87.12 3.17.77.85 1.24 1.93 1.24 3.25 0 4.63-2.81 5.66-5.49 5.95.43.37.82 1.1.82 2.21v3.28c0 .32.21.7.83.58A12 12 0 0012 .5z"/></svg>
+            </a>
+
+            <a href="https://www.linkedin.com/in/prince-negi-94289a314/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
+              <!-- LinkedIn icon -->
+              <svg viewBox="0 0 24 24" width="18" height="18" aria-hidden="true"><path fill="currentColor" d="M4.98 3.5A2.5 2.5 0 102 6a2.5 2.5 0 002.98-2.5zM2.5 8.99H7.5V21H2.5zM9.5 8.99h4.78v1.63h.07c.66-1.25 2.27-2.57 4.68-2.57 5 0 5.93 3.3 5.93 7.59V21h-5v-5.01c0-1.2-.02-2.75-1.67-2.75-1.67 0-1.92 1.3-1.92 2.67V21h-5V8.99z"/></svg>
+            </a>
+
+            <a href="mailto:princenegi11179@gmail.com" aria-label="Email" title="Email">
+              ✉️
+            </a>
+          </div>
+        </div>
+
+        <div class="hero-side fade-in">
+          <!-- simple card with highlights -->
+          <div class="card profile-card">
+            <h3>Quick Info</h3>
+            <ul class="meta">
+              <li><strong>Location:</strong> India</li>
+              <li><strong>Study:</strong> B.Tech CSE (final year)</li>
+              <li><strong>Primary:</strong> Java, Python, Web</li>
+            </ul>
+            <a class="btn small" href="https://github.com/PriNce0P-Negi" target="_blank">View GitHub</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- About -->
+    <section id="about" class="section">
+      <div class="container">
+        <h2 class="section-title fade-in">About Me</h2>
+        <p class="fade-in">
+          I focus on building practical, well-tested software and front-end experiences. I like clean code, data structures,
+          and improving performance. I contribute to small open-source projects and build personal tools that solve real problems.
+        </p>
+      </div>
+    </section>
+
+    <!-- Projects -->
+    <section id="projects" class="section">
+      <div class="container">
+        <h2 class="section-title fade-in">Projects</h2>
+
+        <div class="projects-grid">
+          <!-- Example project cards — replace with your real projects -->
+          <article class="card project-card fade-in">
+            <h3>Project — Portfolio (this site)</h3>
+            <p>Personal portfolio built with HTML, CSS, JS and deployed on GitHub Pages.</p>
+            <p class="project-links">
+              <a href="https://github.com/PriNce0P-Negi" target="_blank">Source</a>
+            </p>
+          </article>
+
+          <article class="card project-card fade-in">
+            <h3>Project — Chat App (example)</h3>
+            <p>Real-time chat app using Node.js and Socket.io. Auth, rooms and responsive UI.</p>
+            <p class="project-links">
+              <a href="https://github.com/PriNce0P-Negi" target="_blank">Source</a>
+            </p>
+          </article>
+
+          <article class="card project-card fade-in">
+            <h3>Project — DSA Library</h3>
+            <p>Collection of data structure implementations and algorithm solutions in Java.</p>
+            <p class="project-links">
+              <a href="https://github.com/PriNce0P-Negi" target="_blank">Source</a>
+            </p>
+          </article>
+        </div>
+      </div>
+    </section>
+
+    <!-- Skills -->
+    <section id="skills" class="section">
+      <div class="container">
+        <h2 class="section-title fade-in">Skills</h2>
+        <div class="skills-grid fade-in">
+          <div class="skill">Java</div>
+          <div class="skill">Python</div>
+          <div class="skill">HTML &amp; CSS</div>
+          <div class="skill">JavaScript</div>
+          <div class="skill">Data Structures</div>
+          <div class="skill">Algorithms</div>
+          <div class="skill">Git & GitHub</div>
+          <div class="skill">Linux</div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact -->
+    <section id="contact" class="section">
+      <div class="container">
+        <h2 class="section-title fade-in">Contact</h2>
+        <p class="fade-in">Email me directly at <a href="mailto:princenegi11179@gmail.com">princenegi11179@gmail.com</a> or connect on LinkedIn / GitHub.</p>
+
+        <div class="contact-cards fade-in">
+          <div class="card small">
+            <h4>LinkedIn</h4>
+            <p><a href="https://www.linkedin.com/in/prince-negi-94289a314/" target="_blank">View profile</a></p>
+          </div>
+          <div class="card small">
+            <h4>GitHub</h4>
+            <p><a href="https://github.com/PriNce0P-Negi" target="_blank">View repositories</a></p>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
 
   <!-- Footer -->
-  <footer>
-    <p>© 2025 Prince Negi | All Rights Reserved</p>
-    <p>
-      <a href="mailto:yourname@email.com">Email</a> |
-      <a href="https://github.com/yourusername" target="_blank">GitHub</a> |
-      <a href="https://linkedin.com/in/yourusername" target="_blank">LinkedIn</a>
-    </p>
+  <footer class="site-footer">
+    <div class="container">
+      <p>© <span id="year"></span> Prince Negi • <a href="mailto:princenegi11179@gmail.com">princenegi11179@gmail.com</a></p>
+    </div>
   </footer>
 
   <script src="script.js"></script>
