Add new favicon and update <head> links

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <title>Prince Negi — Portfolio</title>
   <meta name="description" content="Prince Negi — Final year CSE student. Projects, skills and contact." />
   <link rel="stylesheet" href="Style.css" />
-  <link rel="icon" href="data:,"> <!-- empty favicon to avoid 404 -->
+  <link rel="icon" type="image/svg+xml" href="favicon.svg">
+<link rel="alternate icon" type="image/png" href="favicon.png">  <!-- optional fallback -->
+<link rel="apple-touch-icon" href="apple-touch-icon.png">        <!-- optional for iOS -->
+
 </head>
 <body>
 
